--- a/Tailwind-with-cdn/output.css
+++ b/Tailwind-with-cdn/output.css
@@ -690,8 +690,8 @@ video {
   margin-left: 100px;
 }
 
-.ml-\[10px\] {
-  margin-left: 10px;
+.ml-\[160px\] {
+  margin-left: 160px;
 }
 
 .ml-\[20px\] {
@@ -738,32 +738,40 @@ video {
   margin-top: 1.5rem;
 }
 
-.mt-8 {
-  margin-top: 2rem;
+.mr-2 {
+  margin-right: 0.5rem;
 }
 
-.ml-\[0px\] {
-  margin-left: 0px;
+.ml-20 {
+  margin-left: 5rem;
 }
 
-.ml-\[300px\] {
-  margin-left: 300px;
+.-ml-20 {
+  margin-left: -5rem;
 }
 
-.ml-\[30px\] {
-  margin-left: 30px;
+.-mr-20 {
+  margin-right: -5rem;
 }
 
-.ml-\[70px\] {
-  margin-left: 70px;
+.mr-40 {
+  margin-right: 10rem;
 }
 
-.ml-\[150px\] {
-  margin-left: 150px;
+.mr-0 {
+  margin-right: 0px;
 }
 
-.ml-\[160px\] {
-  margin-left: 160px;
+.mr-6 {
+  margin-right: 1.5rem;
+}
+
+.mr-64 {
+  margin-right: 16rem;
+}
+
+.mr-60 {
+  margin-right: 15rem;
 }
 
 .block {
@@ -835,14 +843,6 @@ video {
   height: 300px;
 }
 
-.h-\[350px\] {
-  height: 350px;
-}
-
-.h-\[380px\] {
-  height: 380px;
-}
-
 .w-1\/2 {
   width: 50%;
 }
@@ -905,18 +905,6 @@ video {
 
 .w-tugas34 {
   width: 300px;
-}
-
-.w-\[px\] {
-  width: px;
-}
-
-.w-\[250px\] {
-  width: 250px;
-}
-
-.w-\[280px\] {
-  width: 280px;
 }
 
 .max-w-lg {
@@ -1512,10 +1500,6 @@ video {
   line-height: 1rem;
 }
 
-.text-\[27px\] {
-  font-size: 27px;
-}
-
 .font-bold {
   font-weight: 700;
 }
@@ -2029,297 +2013,32 @@ video {
     grid-row: span 3 / span 3;
   }
 
-  .md\:mx-auto {
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .md\:ml-10 {
-    margin-left: 2.5rem;
-  }
-
-  .md\:ml-20 {
-    margin-left: 5rem;
-  }
-
-  .md\:ml-0 {
-    margin-left: 0px;
-  }
-
-  .md\:ml-4 {
-    margin-left: 1rem;
-  }
-
-  .md\:ml-48 {
-    margin-left: 12rem;
-  }
-
-  .md\:mr-40 {
-    margin-right: 10rem;
-  }
-
-  .md\:mr-48 {
-    margin-right: 12rem;
-  }
-
-  .md\:ml-6 {
-    margin-left: 1.5rem;
-  }
-
-  .md\:ml-96 {
-    margin-left: 24rem;
-  }
-
-  .md\:ml-9 {
-    margin-left: 2.25rem;
-  }
-
-  .md\:ml-80 {
-    margin-left: 20rem;
-  }
-
-  .md\:ml-2 {
-    margin-left: 0.5rem;
-  }
-
-  .md\:ml-32 {
-    margin-left: 8rem;
-  }
-
-  .md\:ml-3 {
-    margin-left: 0.75rem;
-  }
-
-  .md\:ml-36 {
-    margin-left: 9rem;
-  }
-
-  .md\:ml-8 {
-    margin-left: 2rem;
-  }
-
-  .md\:ml-24 {
-    margin-left: 6rem;
-  }
-
-  .md\:ml-\[\] {
-    margin-left: ;
-  }
-
-  .md\:ml-\[200px\] {
-    margin-left: 200px;
-  }
-
-  .md\:ml-40 {
-    margin-left: 10rem;
-  }
-
-  .md\:mr-20 {
-    margin-right: 5rem;
-  }
-
-  .md\:ml-7 {
-    margin-left: 1.75rem;
-  }
-
-  .md\:ml-72 {
-    margin-left: 18rem;
-  }
-
-  .md\:ml-64 {
-    margin-left: 16rem;
-  }
-
-  .md\:ml-5 {
-    margin-left: 1.25rem;
-  }
-
-  .md\:ml-56 {
-    margin-left: 14rem;
-  }
-
-  .md\:ml-44 {
-    margin-left: 11rem;
-  }
-
-  .md\:ml-28 {
-    margin-left: 7rem;
-  }
-
-  .md\:ml-1 {
-    margin-left: 0.25rem;
-  }
-
-  .md\:ml-\[70px\] {
-    margin-left: 70px;
-  }
-
-  .md\:ml-\[0px\] {
-    margin-left: 0px;
-  }
-
-  .md\:ml-\[680px\] {
-    margin-left: 680px;
-  }
-
-  .md\:ml-\[68px\] {
-    margin-left: 68px;
-  }
-
-  .md\:ml-\[px\] {
-    margin-left: px;
-  }
-
-  .md\:ml-\[25px\] {
-    margin-left: 25px;
-  }
-
-  .md\:ml-\[15px\] {
-    margin-left: 15px;
-  }
-
-  .md\:ml-\[10px\] {
-    margin-left: 10px;
-  }
-
-  .md\:ml-\[8px\] {
-    margin-left: 8px;
-  }
-
-  .md\:ml-\[60px\] {
-    margin-left: 60px;
-  }
-
-  .md\:ml-\[55px\] {
-    margin-left: 55px;
-  }
-
-  .md\:ml-\[5px\] {
-    margin-left: 5px;
-  }
-
-  .md\:ml-\[50px\] {
-    margin-left: 50px;
-  }
-
-  .md\:-ml-\[60px\] {
-    margin-left: -60px;
-  }
-
-  .md\:-ml-\[0px\] {
-    margin-left: -0px;
-  }
-
-  .md\:-ml-\[70px\] {
-    margin-left: -70px;
-  }
-
-  .md\:-ml-4 {
-    margin-left: -1rem;
-  }
-
-  .md\:-ml-2 {
-    margin-left: -0.5rem;
+  .md\:-ml-\[5px\] {
+    margin-left: -5px;
   }
 
   .md\:ml-\[40px\] {
     margin-left: 40px;
   }
 
-  .md\:-ml-\[40px\] {
-    margin-left: -40px;
-  }
-
-  .md\:-ml-\[20px\] {
-    margin-left: -20px;
-  }
-
-  .md\:-ml-\[10px\] {
-    margin-left: -10px;
-  }
-
-  .md\:ml-\[20px\] {
-    margin-left: 20px;
-  }
-
-  .md\:-ml-\[50px\] {
-    margin-left: -50px;
-  }
-
-  .md\:-ml-\[5px\] {
-    margin-left: -5px;
-  }
-
-  .md\:-ml-\[5\] {
-    margin-left: -5;
-  }
-
-  .md\:ml-\[20\] {
-    margin-left: 20;
-  }
-
-  .md\:ml-\[5\] {
-    margin-left: 5;
-  }
-
-  .md\:ml-\[65px\] {
-    margin-left: 65px;
-  }
-
-  .md\:ml-\[70\] {
-    margin-left: 70;
-  }
-
-  .md\:ml-\[75px\] {
-    margin-left: 75px;
-  }
-
-  .md\:ml-\[67px\] {
-    margin-left: 67px;
-  }
-
-  .md\:ml-\[6px\] {
-    margin-left: 6px;
+  .md\:ml-\[60px\] {
+    margin-left: 60px;
   }
 
   .md\:mt-0 {
     margin-top: 0px;
   }
 
-  .md\:flex {
-    display: flex;
-  }
-
   .md\:grid {
     display: grid;
   }
 
-  .md\:w-20 {
-    width: 5rem;
+  .md\:w-24 {
+    width: 6rem;
   }
 
   .md\:w-40 {
     width: 10rem;
-  }
-
-  .md\:w-4 {
-    width: 1rem;
-  }
-
-  .md\:w-1 {
-    width: 0.25rem;
-  }
-
-  .md\:w-16 {
-    width: 4rem;
-  }
-
-  .md\:w-2 {
-    width: 0.5rem;
-  }
-
-  .md\:w-24 {
-    width: 6rem;
   }
 
   .md\:max-w-5xl {
@@ -2356,24 +2075,8 @@ video {
     line-height: 1;
   }
 
-  .md\:text-\[10px\] {
-    font-size: 10px;
-  }
-
   .md\:text-\[20px\] {
     font-size: 20px;
-  }
-
-  .md\:text-\[15px\] {
-    font-size: 15px;
-  }
-
-  .md\:text-\[5px\] {
-    font-size: 5px;
-  }
-
-  .md\:text-\[\] {
-    color: ;
   }
 
   .md\:\*\:bg-blue-700 > * {
@@ -2383,6 +2086,218 @@ video {
 }
 
 @media (min-width: 1024px) {
+  .lg\:ml-\[40px\] {
+    margin-left: 40px;
+  }
+
+  .lg\:mt-0 {
+    margin-top: 0px;
+  }
+
+  .lg\:ml-\[px\] {
+    margin-left: px;
+  }
+
+  .lg\:ml-\[50px\] {
+    margin-left: 50px;
+  }
+
+  .lg\:ml-\[100px\] {
+    margin-left: 100px;
+  }
+
+  .lg\:ml-\[1px\] {
+    margin-left: 1px;
+  }
+
+  .lg\:ml-\[180px\] {
+    margin-left: 180px;
+  }
+
+  .lg\:ml-\[16px\] {
+    margin-left: 16px;
+  }
+
+  .lg\:ml-\[165px\] {
+    margin-left: 165px;
+  }
+
+  .lg\:ml-\[170px\] {
+    margin-left: 170px;
+  }
+
+  .lg\:ml-\[17px\] {
+    margin-left: 17px;
+  }
+
+  .lg\:ml-\[1168px\] {
+    margin-left: 1168px;
+  }
+
+  .lg\:ml-\[168px\] {
+    margin-left: 168px;
+  }
+
+  .lg\:ml-\[11px\] {
+    margin-left: 11px;
+  }
+
+  .lg\:ml-\[1165px\] {
+    margin-left: 1165px;
+  }
+
+  .lg\:ml-\[160px\] {
+    margin-left: 160px;
+  }
+
+  .lg\:ml-\[155px\] {
+    margin-left: 155px;
+  }
+
+  .lg\:ml-\[150px\] {
+    margin-left: 150px;
+  }
+
+  .lg\:ml-\[\] {
+    margin-left: ;
+  }
+
+  .lg\:ml-\[20\] {
+    margin-left: 20;
+  }
+
+  .lg\:ml-\[20px\] {
+    margin-left: 20px;
+  }
+
+  .lg\:ml-\[25\] {
+    margin-left: 25;
+  }
+
+  .lg\:ml-\[25px\] {
+    margin-left: 25px;
+  }
+
+  .lg\:ml-\[30px\] {
+    margin-left: 30px;
+  }
+
+  .lg\:-ml-\[30\] {
+    margin-left: -30;
+  }
+
+  .lg\:-ml-\[30px\] {
+    margin-left: -30px;
+  }
+
+  .lg\:ml-\[50\] {
+    margin-left: 50;
+  }
+
+  .lg\:ml-\[70\] {
+    margin-left: 70;
+  }
+
+  .lg\:ml-\[70px\] {
+    margin-left: 70px;
+  }
+
+  .lg\:ml-\[80px\] {
+    margin-left: 80px;
+  }
+
+  .lg\:ml-\[95px\] {
+    margin-left: 95px;
+  }
+
+  .lg\:ml-\[1\] {
+    margin-left: 1;
+  }
+
+  .lg\:ml-\[120px\] {
+    margin-left: 120px;
+  }
+
+  .lg\:ml-\[130px\] {
+    margin-left: 130px;
+  }
+
+  .lg\:ml-\[145\] {
+    margin-left: 145;
+  }
+
+  .lg\:ml-\[145px\] {
+    margin-left: 145px;
+  }
+
+  .lg\:ml-\[14\] {
+    margin-left: 14;
+  }
+
+  .lg\:ml-\[140px\] {
+    margin-left: 140px;
+  }
+
+  .lg\:ml-\[10px\] {
+    margin-left: 10px;
+  }
+
+  .lg\:ml-\[550px\] {
+    margin-left: 550px;
+  }
+
+  .lg\:ml-\[300px\] {
+    margin-left: 300px;
+  }
+
+  .lg\:ml-\[3px\] {
+    margin-left: 3px;
+  }
+
+  .lg\:ml-\[2px\] {
+    margin-left: 2px;
+  }
+
+  .lg\:ml-\[250px\] {
+    margin-left: 250px;
+  }
+
+  .lg\:-ml-\[200px\] {
+    margin-left: -200px;
+  }
+
+  .lg\:flex {
+    display: flex;
+  }
+
+  .lg\:w-\[400px\] {
+    width: 400px;
+  }
+
+  .lg\:w-\[\] {
+    width: ;
+  }
+
+  .lg\:w-\[200px\] {
+    width: 200px;
+  }
+
+  .lg\:w-\[150\] {
+    width: 150;
+  }
+
+  .lg\:w-\[150px\] {
+    width: 150px;
+  }
+
+  .lg\:w-\[100px\] {
+    width: 100px;
+  }
+
+  .lg\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
   .lg\:bg-blue-200 {
     --tw-bg-opacity: 1;
     background-color: rgb(191 219 254 / var(--tw-bg-opacity));
