--- a/Tailwind-with-cdn/output.css
+++ b/Tailwind-with-cdn/output.css
@@ -654,6 +654,10 @@ video {
   margin-bottom: 2.5rem;
 }
 
+.mb-20 {
+  margin-bottom: 5rem;
+}
+
 .mb-4 {
   margin-bottom: 1rem;
 }
@@ -678,12 +682,24 @@ video {
   margin-left: 2.5rem;
 }
 
+.ml-11 {
+  margin-left: 2.75rem;
+}
+
 .ml-4 {
   margin-left: 1rem;
 }
 
 .ml-5 {
   margin-left: 1.25rem;
+}
+
+.ml-8 {
+  margin-left: 2rem;
+}
+
+.ml-9 {
+  margin-left: 2.25rem;
 }
 
 .ml-\[100px\] {
@@ -698,6 +714,14 @@ video {
   margin-left: 50px;
 }
 
+.ml-\[70px\] {
+  margin-left: 70px;
+}
+
+.ml-\[90px\] {
+  margin-left: 90px;
+}
+
 .mr-20 {
   margin-right: 5rem;
 }
@@ -710,8 +734,20 @@ video {
   margin-right: 15rem;
 }
 
+.mt-1 {
+  margin-top: 0.25rem;
+}
+
+.mt-1\.5 {
+  margin-top: 0.375rem;
+}
+
 .mt-10 {
   margin-top: 2.5rem;
+}
+
+.mt-12 {
+  margin-top: 3rem;
 }
 
 .mt-2 {
@@ -738,152 +774,24 @@ video {
   margin-top: 1.5rem;
 }
 
-.mb-20 {
-  margin-bottom: 5rem;
+.mt-8 {
+  margin-top: 2rem;
 }
 
-.mt-28 {
-  margin-top: 7rem;
+.mt-9 {
+  margin-top: 2.25rem;
 }
 
-.mb-6 {
-  margin-bottom: 1.5rem;
-}
-
-.mb-64 {
-  margin-bottom: 16rem;
-}
-
-.mb-8 {
-  margin-bottom: 2rem;
-}
-
-.-mb-80 {
-  margin-bottom: -20rem;
-}
-
-.mb-80 {
-  margin-bottom: 20rem;
-}
-
-.mb-9 {
-  margin-bottom: 2.25rem;
-}
-
-.mb-\[\] {
-  margin-bottom: ;
-}
-
-.mb-\[300px\] {
-  margin-bottom: 300px;
-}
-
-.mt-24 {
-  margin-top: 6rem;
-}
-
-.ml-3 {
-  margin-left: 0.75rem;
-}
-
-.ml-32 {
-  margin-left: 8rem;
-}
-
-.mt-3 {
-  margin-top: 0.75rem;
-}
-
-.mt-1 {
-  margin-top: 0.25rem;
-}
-
-.mt-14 {
-  margin-top: 3.5rem;
-}
-
-.mt-\[30px\] {
-  margin-top: 30px;
-}
-
-.ml-8 {
-  margin-left: 2rem;
-}
-
-.ml-auto {
-  margin-left: auto;
-}
-
-.ml-14 {
-  margin-left: 3.5rem;
-}
-
-.ml-12 {
-  margin-left: 3rem;
-}
-
-.ml-11 {
-  margin-left: 2.75rem;
-}
-
-.mt-\[50px\] {
-  margin-top: 50px;
+.mt-\[52px\] {
+  margin-top: 52px;
 }
 
 .mt-\[60px\] {
   margin-top: 60px;
 }
 
-.mt-\[70px\] {
-  margin-top: 70px;
-}
-
-.ml-16 {
-  margin-left: 4rem;
-}
-
-.ml-2 {
-  margin-left: 0.5rem;
-}
-
-.ml-20 {
-  margin-left: 5rem;
-}
-
-.mt-8 {
-  margin-top: 2rem;
-}
-
-.ml-9 {
-  margin-left: 2.25rem;
-}
-
-.ml-24 {
-  margin-left: 6rem;
-}
-
-.ml-\[\] {
-  margin-left: ;
-}
-
-.ml-\[90px\] {
-  margin-left: 90px;
-}
-
-.ml-\[70px\] {
-  margin-left: 70px;
-}
-
-.mt-12 {
-  margin-top: 3rem;
-}
-
-.mt-1\.5 {
-  margin-top: 0.375rem;
-}
-
-.mt-\[55px\] {
-  margin-top: 55px;
+.mt-7 {
+  margin-top: 1.75rem;
 }
 
 .block {
@@ -943,36 +851,12 @@ video {
   height: 400px;
 }
 
+.h-\[40px\] {
+  height: 40px;
+}
+
 .h-\[50px\] {
   height: 50px;
-}
-
-.h-full {
-  height: 100%;
-}
-
-.h-tugas34 {
-  height: 300px;
-}
-
-.h-\[725px\] {
-  height: 725px;
-}
-
-.h-\[760px\] {
-  height: 760px;
-}
-
-.h-\[76\] {
-  height: 76;
-}
-
-.h-\[\] {
-  height: ;
-}
-
-.h-\[600\] {
-  height: 600;
 }
 
 .h-\[600px\] {
@@ -983,36 +867,36 @@ video {
   height: 700px;
 }
 
-.h-\[0px\] {
-  height: 0px;
+.h-full {
+  height: 100%;
 }
 
-.h-\[900px\] {
-  height: 900px;
+.h-tugas34 {
+  height: 300px;
 }
 
-.h-\[00px\] {
-  height: 00px;
+.h-6 {
+  height: 1.5rem;
 }
 
-.h-\[70000px\] {
-  height: 70000px;
+.h-4 {
+  height: 1rem;
 }
 
-.h-\[500px\] {
-  height: 500px;
+.h-5 {
+  height: 1.25rem;
 }
 
-.h-\[40px\] {
-  height: 40px;
-}
-
-.h-\[800px\] {
-  height: 800px;
+.h-\[750px\] {
+  height: 750px;
 }
 
 .w-1\/2 {
   width: 50%;
+}
+
+.w-1\/3 {
+  width: 33.333333%;
 }
 
 .w-10 {
@@ -1055,12 +939,20 @@ video {
   width: 192px;
 }
 
+.w-\[250px\] {
+  width: 250px;
+}
+
 .w-\[300px\] {
   width: 300px;
 }
 
 .w-\[340px\] {
   width: 340px;
+}
+
+.w-\[400px\] {
+  width: 400px;
 }
 
 .w-\[80px\] {
@@ -1075,84 +967,12 @@ video {
   width: 300px;
 }
 
-.w-\[1350px\] {
-  width: 1350px;
+.w-6 {
+  width: 1.5rem;
 }
 
-.w-\[640px\] {
-  width: 640px;
-}
-
-.w-\[\] {
-  width: ;
-}
-
-.w-\[1\] {
-  width: 1;
-}
-
-.w-\[800\] {
-  width: 800;
-}
-
-.w-\[800px\] {
-  width: 800px;
-}
-
-.w-\[500px\] {
-  width: 500px;
-}
-
-.w-\[00px\] {
-  width: 00px;
-}
-
-.w-\[4000px\] {
-  width: 4000px;
-}
-
-.w-\[400px\] {
-  width: 400px;
-}
-
-.w-\[900px\] {
-  width: 900px;
-}
-
-.w-\[3px\] {
-  width: 3px;
-}
-
-.w-\[32px\] {
-  width: 32px;
-}
-
-.w-\[3230px\] {
-  width: 3230px;
-}
-
-.w-\[230px\] {
-  width: 230px;
-}
-
-.w-\[2500px\] {
-  width: 2500px;
-}
-
-.w-\[250px\] {
-  width: 250px;
-}
-
-.w-\[200px\] {
-  width: 200px;
-}
-
-.w-1 {
-  width: 0.25rem;
-}
-
-.w-1\/3 {
-  width: 33.333333%;
+.w-4 {
+  width: 1rem;
 }
 
 .max-w-lg {
@@ -1303,6 +1123,10 @@ video {
   justify-content: center;
 }
 
+.gap-1 {
+  gap: 0.25rem;
+}
+
 .overflow-hidden {
   overflow: hidden;
 }
@@ -1323,6 +1147,10 @@ video {
   border-radius: 1.5rem;
 }
 
+.rounded-\[35px\] {
+  border-radius: 35px;
+}
+
 .rounded-full {
   border-radius: 9999px;
 }
@@ -1337,78 +1165,6 @@ video {
 
 .rounded-xl {
   border-radius: 0.75rem;
-}
-
-.rounded-\[110px\] {
-  border-radius: 110px;
-}
-
-.rounded-\[11px\] {
-  border-radius: 11px;
-}
-
-.rounded-\[1px\] {
-  border-radius: 1px;
-}
-
-.rounded-\[px\] {
-  border-radius: px;
-}
-
-.rounded-2xl {
-  border-radius: 1rem;
-}
-
-.rounded-\[\] {
-  border-radius: ;
-}
-
-.rounded-\[1\] {
-  border-radius: 1;
-}
-
-.rounded-\[89px\] {
-  border-radius: 89px;
-}
-
-.rounded-\[200px\] {
-  border-radius: 200px;
-}
-
-.rounded-\[70px\] {
-  border-radius: 70px;
-}
-
-.rounded-\[300px\] {
-  border-radius: 300px;
-}
-
-.rounded-\[00px\] {
-  border-radius: 00px;
-}
-
-.rounded-\[0px\] {
-  border-radius: 0px;
-}
-
-.rounded-\[60px\] {
-  border-radius: 60px;
-}
-
-.rounded-\[50px\] {
-  border-radius: 50px;
-}
-
-.rounded-\[45px\] {
-  border-radius: 45px;
-}
-
-.rounded-\[40px\] {
-  border-radius: 40px;
-}
-
-.rounded-\[35px\] {
-  border-radius: 35px;
 }
 
 .border {
@@ -1431,12 +1187,12 @@ video {
   border-width: 1px;
 }
 
-.border-\[3px\] {
-  border-width: 3px;
-}
-
 .border-\[2px\] {
   border-width: 2px;
+}
+
+.border-\[3px\] {
+  border-width: 3px;
 }
 
 .border-b-4 {
@@ -1478,16 +1234,6 @@ video {
 .border-slate-400 {
   --tw-border-opacity: 1;
   border-color: rgb(148 163 184 / var(--tw-border-opacity));
-}
-
-.border-slate-500 {
-  --tw-border-opacity: 1;
-  border-color: rgb(100 116 139 / var(--tw-border-opacity));
-}
-
-.border-slate-950 {
-  --tw-border-opacity: 1;
-  border-color: rgb(2 6 23 / var(--tw-border-opacity));
 }
 
 .border-slate-50 {
@@ -1605,6 +1351,11 @@ video {
   background-color: rgb(71 85 105 / var(--tw-bg-opacity));
 }
 
+.bg-slate-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(15 23 42 / var(--tw-bg-opacity));
+}
+
 .bg-slate-950 {
   --tw-bg-opacity: 1;
   background-color: rgb(2 6 23 / var(--tw-bg-opacity));
@@ -1615,24 +1366,14 @@ video {
   background-color: rgb(109 40 217 / var(--tw-bg-opacity));
 }
 
-.bg-yellow-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(253 224 71 / var(--tw-bg-opacity));
-}
-
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-slate-700 {
+.bg-yellow-300 {
   --tw-bg-opacity: 1;
-  background-color: rgb(51 65 85 / var(--tw-bg-opacity));
-}
-
-.bg-slate-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(15 23 42 / var(--tw-bg-opacity));
+  background-color: rgb(253 224 71 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-r {
@@ -1738,6 +1479,10 @@ video {
   background-repeat: no-repeat;
 }
 
+.p-1 {
+  padding: 0.25rem;
+}
+
 .p-10 {
   padding: 2.5rem;
 }
@@ -1754,13 +1499,22 @@ video {
   padding: 3.25rem;
 }
 
-.p-1 {
-  padding: 0.25rem;
+.p-0 {
+  padding: 0px;
+}
+
+.p-0\.5 {
+  padding: 0.125rem;
 }
 
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .px-5 {
@@ -1776,11 +1530,6 @@ video {
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
-}
-
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
 }
 
 .text-center {
@@ -1832,6 +1581,10 @@ video {
   font-size: 13px;
 }
 
+.text-\[15px\] {
+  font-size: 15px;
+}
+
 .text-\[25px\] {
   font-size: 25px;
 }
@@ -1868,44 +1621,16 @@ video {
   line-height: 1rem;
 }
 
-.text-\[35px\] {
-  font-size: 35px;
-}
-
-.text-\[3px\] {
-  font-size: 3px;
-}
-
-.text-\[16px\] {
-  font-size: 16px;
-}
-
-.text-\[6px\] {
-  font-size: 6px;
-}
-
-.text-\[1px\] {
-  font-size: 1px;
-}
-
-.text-\[15px\] {
-  font-size: 15px;
-}
-
 .font-bold {
   font-weight: 700;
 }
 
-.font-semibold {
-  font-weight: 600;
-}
-
-.font-extrabold {
-  font-weight: 800;
-}
-
 .font-medium {
   font-weight: 500;
+}
+
+.font-semibold {
+  font-weight: 600;
 }
 
 .uppercase {
@@ -1933,6 +1658,11 @@ video {
 .text-pink-700 {
   --tw-text-opacity: 1;
   color: rgb(190 24 93 / var(--tw-text-opacity));
+}
+
+.text-red-500 {
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
 .text-red-600 {
@@ -1972,11 +1702,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-red-500 {
-  --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
 .opacity-10 {
@@ -2348,6 +2073,45 @@ video {
   visibility: hidden;
 }
 
+:is(.dark .dark\:h-6) {
+  height: 1.5rem;
+}
+
+:is(.dark .dark\:translate-x-3) {
+  --tw-translate-x: 0.75rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+:is(.dark .dark\:border-slate-950) {
+  --tw-border-opacity: 1;
+  border-color: rgb(2 6 23 / var(--tw-border-opacity));
+}
+
+:is(.dark .dark\:bg-black) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+:is(.dark .dark\:bg-slate-900) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(15 23 42 / var(--tw-bg-opacity));
+}
+
+:is(.dark .dark\:bg-slate-950) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(2 6 23 / var(--tw-bg-opacity));
+}
+
+:is(.dark .dark\:text-white) {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+:is(.dark .dark\:text-black) {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
 @media (min-width: 640px) {
   .sm\:mt-24 {
     margin-top: 6rem;
@@ -2426,6 +2190,10 @@ video {
     margin-left: -5px;
   }
 
+  .md\:ml-\[130px\] {
+    margin-left: 130px;
+  }
+
   .md\:ml-\[40px\] {
     margin-left: 40px;
   }
@@ -2434,196 +2202,56 @@ video {
     margin-left: 60px;
   }
 
-  .md\:mt-0 {
-    margin-top: 0px;
-  }
-
-  .md\:ml-20 {
-    margin-left: 5rem;
-  }
-
-  .md\:ml-2 {
-    margin-left: 0.5rem;
-  }
-
-  .md\:ml-64 {
-    margin-left: 16rem;
-  }
-
-  .md\:ml-60 {
-    margin-left: 15rem;
-  }
-
-  .md\:ml-5 {
-    margin-left: 1.25rem;
-  }
-
-  .md\:ml-52 {
-    margin-left: 13rem;
-  }
-
-  .md\:ml-4 {
-    margin-left: 1rem;
-  }
-
-  .md\:ml-44 {
-    margin-left: 11rem;
-  }
-
-  .md\:ml-40 {
-    margin-left: 10rem;
-  }
-
-  .md\:ml-3 {
-    margin-left: 0.75rem;
-  }
-
-  .md\:ml-36 {
-    margin-left: 9rem;
-  }
-
-  .md\:ml-28 {
-    margin-left: 7rem;
-  }
-
-  .md\:ml-1 {
-    margin-left: 0.25rem;
-  }
-
-  .md\:ml-16 {
-    margin-left: 4rem;
-  }
-
-  .md\:ml-12 {
-    margin-left: 3rem;
-  }
-
-  .md\:mt-16 {
-    margin-top: 4rem;
-  }
-
-  .md\:mt-20 {
-    margin-top: 5rem;
-  }
-
-  .md\:mt-2 {
-    margin-top: 0.5rem;
-  }
-
-  .md\:mt-24 {
-    margin-top: 6rem;
-  }
-
-  .md\:mt-3 {
-    margin-top: 0.75rem;
-  }
-
-  .md\:mt-5 {
-    margin-top: 1.25rem;
-  }
-
-  .md\:ml-\[70px\] {
-    margin-left: 70px;
-  }
-
-  .md\:ml-\[780px\] {
-    margin-left: 780px;
-  }
-
-  .md\:ml-\[80px\] {
-    margin-left: 80px;
-  }
-
-  .md\:ml-\[85px\] {
-    margin-left: 85px;
-  }
-
-  .md\:ml-\[85x\] {
-    margin-left: 85x;
-  }
-
-  .md\:ml-\[90px\] {
-    margin-left: 90px;
-  }
-
-  .md\:ml-\[95px\] {
-    margin-left: 95px;
-  }
-
-  .md\:ml-\[100px\] {
-    margin-left: 100px;
-  }
-
   .md\:ml-\[98px\] {
     margin-left: 98px;
   }
 
-  .md\:mt-\[\] {
-    margin-top: ;
-  }
-
-  .md\:mt-\[80px\] {
-    margin-top: 80px;
-  }
-
-  .md\:mt-\[85\] {
-    margin-top: 85;
-  }
-
-  .md\:mt-\[85px\] {
-    margin-top: 85px;
-  }
-
-  .md\:mt-\[90px\] {
-    margin-top: 90px;
-  }
-
-  .md\:mt-10 {
-    margin-top: 2.5rem;
+  .md\:mt-0 {
+    margin-top: 0px;
   }
 
   .md\:mt-12 {
     margin-top: 3rem;
   }
 
-  .md\:ml-0 {
-    margin-left: 0px;
+  .md\:mt-16 {
+    margin-top: 4rem;
   }
 
-  .md\:ml-\[\] {
-    margin-left: ;
+  .md\:mt-24 {
+    margin-top: 6rem;
   }
 
-  .md\:ml-\[120\] {
-    margin-left: 120;
+  .md\:mt-5 {
+    margin-top: 1.25rem;
   }
 
-  .md\:ml-\[120px\] {
-    margin-left: 120px;
+  .md\:mt-\[80px\] {
+    margin-top: 80px;
   }
 
-  .md\:ml-32 {
-    margin-left: 8rem;
+  .md\:mt-\[90px\] {
+    margin-top: 90px;
   }
 
-  .md\:ml-\[130px\] {
-    margin-left: 130px;
+  .md\:mt-\[70px\] {
+    margin-top: 70px;
   }
 
   .md\:grid {
     display: grid;
   }
 
-  .md\:h-\[\] {
-    height: ;
-  }
-
-  .md\:h-\[800\] {
-    height: 800;
+  .md\:h-\[1000px\] {
+    height: 1000px;
   }
 
   .md\:h-\[800px\] {
     height: 800px;
+  }
+
+  .md\:h-\[850px\] {
+    height: 850px;
   }
 
   .md\:w-24 {
@@ -2638,28 +2266,12 @@ video {
     width: 400px;
   }
 
-  .md\:w-\[600px\] {
-    width: 600px;
-  }
-
-  .md\:w-\[300px\] {
-    width: 300px;
-  }
-
   .md\:w-\[500px\] {
     width: 500px;
   }
 
-  .md\:w-\[\] {
-    width: ;
-  }
-
-  .md\:w-\[w-400\] {
-    width: w-400;
-  }
-
-  .md\:w-\[400\] {
-    width: 400;
+  .md\:w-\[600px\] {
+    width: 600px;
   }
 
   .md\:max-w-5xl {
@@ -2696,61 +2308,16 @@ video {
     line-height: 1;
   }
 
-  .md\:text-\[20px\] {
-    font-size: 20px;
-  }
-
-  .md\:text-\[30px\] {
-    font-size: 30px;
-  }
-
-  .md\:text-\[50px\] {
-    font-size: 50px;
-  }
-
-  .md\:text-\[0px\] {
-    font-size: 0px;
-  }
-
-  .md\:text-\[40px\] {
-    font-size: 40px;
-  }
-
-  .md\:text-\[35px\] {
-    font-size: 35px;
-  }
-
   .md\:text-\[18px\] {
     font-size: 18px;
   }
 
-  .md\:text-\[2px\] {
-    font-size: 2px;
+  .md\:text-\[20px\] {
+    font-size: 20px;
   }
 
-  .md\:text-\[10px\] {
-    font-size: 10px;
-  }
-
-  .md\:text-sm {
-    font-size: 0.875rem;
-    line-height: 1.25rem;
-  }
-
-  .md\:text-\[\] {
-    color: ;
-  }
-
-  .md\:text-\[px\] {
-    color: px;
-  }
-
-  .md\:text-\[p28\] {
-    color: p28;
-  }
-
-  .md\:text-\[2\] {
-    color: 2;
+  .md\:text-\[40px\] {
+    font-size: 40px;
   }
 
   .md\:\*\:bg-blue-700 > * {
